--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -87,6 +87,9 @@ html{
 .reviews{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    /*display: flex;*/
+    /*justify-content: space-between;*/
+    /*margin: .5rem;*/
 }
 
 .reviews__figure{
