--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -18,6 +18,7 @@ html{
     max-width: 60rem;
     width: 90%;
     padding-top: 5rem;
+    height: 90vh;
 }
 
 .container a{
@@ -85,11 +86,12 @@ html{
 }
 
 .reviews{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    /*display: flex;*/
-    /*justify-content: space-between;*/
-    /*margin: .5rem;*/
+    /*display: grid;*/
+    /*grid-template-columns: 1fr 1fr 1fr;*/
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    margin: .5rem;
 }
 
 .reviews__figure{
@@ -125,7 +127,6 @@ html{
     align-items: center;
     justify-content: space-between;
     background-color: #666;
-    /*height: 90vh;*/
 }
 
 .fa{
