--- a/src/main/resources/templates/reviewsTemplate.html
+++ b/src/main/resources/templates/reviewsTemplate.html
@@ -23,8 +23,8 @@
 <div class="container">
     <h2 class="reviews__title">A List of All Reviews</h2>
 
-    <section class="reviews" th:each="review: ${reviewsModel}">
-        <article class="reviews__column" >
+    <section class="reviews" >
+        <article class="reviews__column" th:each="review: ${reviewsModel}">
             <h3 class="reviews__column_title" ><a
                     th:href="@{/review(id=${review.id})}" th:text="${review.title}"></a>
                 </h3>
