--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -127,6 +127,7 @@ html{
     align-items: center;
     justify-content: space-between;
     background-color: #666;
+    margin-top: 5rem;
 }
 
 .fa{
